Update Actor to use Pageable instead of List